syntax = "proto3";
option java_multiple_files = true;
package betpawa.test.demo.grpc;

service WalletService {
    rpc Deposit (PaymentRequest) returns (PaymentResponse) {}
    rpc Withdraw (PaymentRequest) returns (PaymentResponse) {}
    rpc GetBalance (BalanceRequest) returns (BalanceResponse) {}
}

message PaymentRequest {
    int64 userId = 1;
    string amount = 2;
    Currency currency = 3;

    enum Currency {
        EUR = 0;
        GBP = 1;
        USD = 2;
    }
}

message BalanceRequest {
    int64 userId = 1;
}

message BalanceResponse {
    repeated PaymentRequest amount = 1;
}

message PaymentResponse {
}

